# backend/src/modules/vote/vote.controller.ts
@@ -4,6 +4,7 @@ import { Request, Response } from 'express';
 import VoteService from './vote.service';
 import IVoteEntity from '../../domain/vote/vote.entity';
 import Result from '../../infra/core/factories/result.factory';
+import GuestVoterService from '../guest-voter/guest-voter.service';
 
 export default class VoteController {
   public async index(request: Request, response: Response) {
@@ -16,35 +17,32 @@ export default class VoteController {
 
       return response.json(poll);
     } catch (error) {
-      return response.json(Result.Fail(error.message));
+      return response.status(400).json(Result.Fail(error.message));
     }
   }
 
   public async create(request: Request, response: Response) {
-    const { candidateId, sessionId } = request.body;
+    const { candidateId, sessionId, accessCode } = request.body;
 
     const userId = request.userId;
 
     try {
       const voteService = container.resolve(VoteService);
 
-      const userHasNotVoted = await voteService.validate(sessionId, userId);
-
-      if (userHasNotVoted) {
-        const vote = await voteService.save({
-          userId,
-          candidateId,
-          sessionId,
-        } as IVoteEntity);
-
-        return response.json(Result.Success(vote));
-      } else {
-        return response.json(
-          Result.Fail('Voto já registrado!'),
-        );
+      if (accessCode) {
+        const guestVoterService = container.resolve(GuestVoterService);
+        await guestVoterService.invalidateCode(accessCode);
       }
+
+      const vote = await voteService.save({
+        userId,
+        candidateId,
+        sessionId,
+      } as IVoteEntity);
+
+      return response.json(Result.Success(vote));
     } catch (error) {
-      return response.json(Result.Fail(error.message));
+      return response.status(400).json(Result.Fail(error.message));
     }
   }
 
@@ -58,7 +56,7 @@ export default class VoteController {
 
       return response.json(Result.Success(voteEntity));
     } catch (error) {
-      return response.json(Result.Fail(error.message));
+      return response.status(400).json(Result.Fail(error.message));
     }
   }
 
@@ -72,7 +70,7 @@ export default class VoteController {
 
       return response.json(Result.Success());
     } catch (error) {
-      return response.json(Result.Fail(error.message));
+      return response.status(400).json(Result.Fail(error.message));
     }
   }
 }
